[package]
name = "inside_position_manip"
version = "0.1.0"
authors = ["Piet"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.24"
winapi = {version = "0.3", features = ["winuser"]}
pixels = "0.3"
imageproc = "0.22"