[package]
name = "inside_position_manip"
version = "0.1.0"
authors = ["Piet"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.25"
winapi = {version = "0.3", features = ["winuser", "memoryapi", "processthreadsapi", "libloaderapi", "psapi", "errhandlingapi"]}
pixels = "0.3"
image = "0.23"
imageproc = "0.22"
rusttype = "0.9"
device_query = "0.2.8"
raw-window-handle = "0.3.3"

[profile.release]
opt-level = "s"